fix: character reveal layout issues on mobile

--- a/src/components/game/components/gameReveal/styles.module.scss
+++ b/src/components/game/components/gameReveal/styles.module.scss
@@ -7,15 +7,15 @@
   .characterName {
     font-size: vars.$font-size-display;
     text-align: center;
-    margin-bottom: vars.$spacing-secondary;
   }
 
   .character {
     width: calc(100% - vars.$spacing-primary * 2);
     align-self: center;
     margin-bottom: calc(vars.$spacing-primary * 2);
-    height: 400px;
-    width: 300px;
+    flex: 1;
+    max-width: 300px;
+    max-height: 400px;
     justify-content: center;
   }
 
